#2893: _navigation.scss, ensure 'z-index' on all menus

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -8,6 +8,11 @@
 //       whereas, '/* */' comment(s), will be preserved in the compiled output.
 
 #bootstrap-override {
+  .menu-container {
+    position: relative;
+    z-index: 1;
+  }
+
   .small-viewport {
     .menu-container {
       .main-navigation {
@@ -33,9 +38,6 @@
   .large-viewport {
     .anonymous {
       .menu-container {
-        position: relative;
-        z-index: 1;
-
         .main-navigation {
           margin-top: .75rem;
           padding: 0 $gutter-1 * 1.25 0 $gutter-1 / 2;
